--- a/ceph/Dockerfile.rbd
+++ b/ceph/Dockerfile.rbd
@@ -19,7 +19,8 @@ FROM debian:buster
 RUN apt-get     update          &&  \
     apt-get     upgrade -y      &&  \
     apt-get     install -y          \
-                ceph-common     &&  \
+                ceph-common         \
+                rbd-nbd         &&  \
     apt-get     clean   -y      &&  \
     rm  -rf /var/lib/apt/lists/*    \
             /var/cache/apt/*
