--- a/ceph/examples/test-rbd-pod.yaml
+++ b/ceph/examples/test-rbd-pod.yaml
@@ -1,11 +1,24 @@
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: test-rbd-claim
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: rbd
+  resources:
+    requests:
+      storage: 10Mi
+---
 kind: Pod
 apiVersion: v1
 metadata:
   name: test-pod
 spec:
   containers:
-  - name: test-pod
-    image: gcr.io/google_containers/busybox:1.24
+  - name: test-rbd-pod
+    image: alpine:latest
     command:
     - "/bin/sh"
     args:
@@ -18,4 +31,5 @@ spec:
   volumes:
   - name: pvc
     persistentVolumeClaim:
-      claimName: claim1
+      claimName: test-rbd-claim
+---
